# Snorlax-desktop-pet

./: .gitignore  AGENTS.md  CLAUDE.md  DesktopPet.spec  README.md  claude-pet.spec  pyproject.toml  video_narration.md  video_plan.md
.claude/: settings.local.json
.trae/documents/: arch-optimization-eliminate-nodejs.md  optimization-reliability-architecture-experience.md  productize-pip-install.md
desktop_pet/: __init__.py  __main__.py  alarm.py  app.py  chat.py  cli.py  config.py  default_config.json  gui.py  hooks.py  launcher.py  notify.py  shared.py  state.py
tests/: test_config.py  test_hooks.py  test_state.py
